<resources>
    <string name="send">Send</string>
    <string name="app_version">App Version</string>
    <string name="sort_by">Sort by</string>
    <string name="application_type">Application type</string>
    <string name="settings">Settings</string>
    <string name="column_count">Column count</string>
    <string name="general">General</string>
    <string name="open_application">Open application</string>
    <string name="long_press_action">Long press action</string>
    <string name="quick_info">Quick info</string>
    <string name="package_name">Package name</string>
    <string name="language">Language</string>
    <string name="system_default">System default</string>
    <string name="display">Display</string>
    <string name="dynamic_colors">Dynamic colors</string>
    <string name="night_mode">Night mode</string>
    <string name="app_theme">App theme</string>
    <string name="more">More</string>
    <string name="help_and_feedback">Help and feedback</string>
    <string name="about">About</string>
    <string name="uninstall_application">Uninstall application</string>
    <string name="direct_share">Direct share</string>
    <string name="none">None</string>
    <string name="version_code">Version code</string>
    <string name="version_name">Version name</string>
    <string name="default_colors">Default colors</string>
    <string name="on">On</string>
    <string name="off">Off</string>

    <string name="english" translatable="false">English</string>
    <string name="persian" translatable="false">پارسی</string>
    <string name="app_name">APK Share</string>
    <string name="about_text">"    Sharing the installation file of applications is always a big problem on android devices. Of course, some smartphone maker companies add a feature to self android shell for making this work easier like as MIUI from Xiaomi. But in most android devices like Samsung devices, Google pixels, etc, this feature does not exist. So you should use it from third-party apps. Now the problem is here that there is not almost any good application for this work.\n    I am happy to say I understand this problem, and to solve it, I made this application and am developing it. You can share 5 apk files together in one moment with this app. This app supports two languages, and you can customize the most of its parts for your. Anyway, it is not great and has many problems, sure.\n    I'll be glad to hear your opinions and feedback about it because this work helps me make this application better than the past, so please report any problems if you find them from the help and feedback section. Also, you can help me by developing this app with me from its repository on my github. and for the end, I should say I always try to find our problems and solve those by my skills.\n    Don't forget to be happy:-)"</string>
    <string name="help_and_feedback_mail_subject">APK Share app  help and feedback</string>
    <string name="help_and_feedback_mail_hint">Your feedback or question…</string>
    <string name="delete_own_error_msg">How could you to uninstall me ;(</string>
    <string name="activity_not_found_error_msg">There is not anything to do this.</string>
    <string name="coming_soon">Coming soon…</string>
    <string name="developer_colon">developer:</string>
    <string name="developer_name">Reza AliMohammadi</string>
    <string name="msg_openning_app_error">You cannot open this application directly.</string>
    <string name="search_for_apps">Search for apps</string>
    <string name="reshare">Reshare</string>
    <string name="reshare_shortcut_disabled">Reshare shortcut is disabled.</string>
    <string name="shortcut_long_label_reshare">Share the last shared apps again.</string>
    <string name="cancel">Cancel</string>
    <string name="apply">Apply</string>
    <string name="reverse_sort">Reverse sort</string>
    <string name="create_backup_file">Create backup file</string>
    <string name="msg_app_needs_storage_permission">App needs to \"Storage permission\" for creating backup files.</string>
    <string name="storage_permission">Storage permission</string>
    <string name="grant">Grant</string>
    <string name="deny">Deny</string>
    <string name="msg_creating_backup_file_successful">Creating backup file is successful :)</string>
    <string name="view">View</string>
    <string name="name">Name</string>
    <string name="install_date">Install date</string>
    <string name="size">Size</string>
    <string name="storage_permission_description">(OPTIONAL) This permission used for creating backup files into download directory.</string>
    <string name="app_permissions">App pernissions</string>
    <string name="app_version_name">2.0.0</string>
    <string name="copy_files">Copying files...</string>
    <string name="formatable_msg_copy_files_progress">Copying %s to .../CacheStorage/%s  • %d%% completed • Working on...</string>
    <string name="msg_no_any_app_for_intent">There is no any app that do this work!</string>
    <string name="view_this_app_in_the_settings">View this app in the Settings</string>
    <string name="permissions">Permissions</string>
    <string name="last_update_time">Last update time</string>
    <string name="installation_time">Installation time</string>
    <string name="show_detailed_information">Show detailed information</string>
    <string name="kilobyte">Kilobyte</string>
    <string name="megabyte">Megabyte</string>
    <string name="gigabyte">Gigabyte</string>
    <string name="byte_label">B</string>
    <string name="kilobyte_label">KB</string>
    <string name="megabyte_label">MB</string>
    <string name="gigabyte_label">GB</string>
    <string name="this_app_has_not_need_any_permissions">This app hasn\'t need to any permissions!</string>
    <string name="preparing_packages_list">Preparing packages list...</string>
    <string name="email_to_developer">Email to developer</string>
    <string name="check_updates">Check updates</string>
    <string name="view_source_code_on_the_github">View source code on the Github</string>
    <string name="compose_email_via">Compose email via:</string>
    <string name="deselect">Deselect</string>
    <string name="backup">Backup</string>
    <string name="uninstall">Uninstall</string>
    <string name="open">Open</string>
    <string name="confirm_uninstall_app">Confirm Uninstall \"%s\"</string>
    <string name="msg_uninstall_app_alert_dialog">Whould you want to uninstall \"%s\"? Also you can make a backup before uninstalling. What do you want to do?</string>
    <string name="backup_and_uninstall">Backup And Uninstall</string>
    <string name="category">Category</string>
    <string name="app_category_game">Game</string>
    <string name="app_category_audio">Audio</string>
    <string name="app_category_video">Video</string>
    <string name="app_category_image">Image</string>
    <string name="app_category_social">Social</string>
    <string name="app_category_news">News</string>
    <string name="app_category_maps">Maps</string>
    <string name="app_category_productivity">Productivity</string>
    <string name="app_category_accessibility">Accessibility</string>
    <string name="app_category_shoping">Shoping</string>
    <string name="app_category_finance">Finance</string>
    <string name="app_category_health">Health</string>
    <string name="app_category_education">Education</string>
    <string name="app_category_communication">Communication</string>
    <string name="app_category_browser">Browser</string>
    <string name="app_category_food">Food</string>
    <string name="app_category_travel">Travel</string>
    <string name="app_category_tools">Tools</string>
    <string name="app_category_system">System</string>
    <string name="app_category_launcher">Launcher</string>
    <string name="app_category_unknown">Unknown</string>
</resources>