<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/mainMenuItemSort"
        android:title="@string/sort_by"
        android:icon="@drawable/ic_filter_list"
        app:showAsAction="always"/>

    <item
        android:id="@+id/mainMenuItemType"
        android:title="@string/application_type"
        android:icon="@drawable/ic_category"
        app:showAsAction="always"/>

    <item
        android:id="@+id/mainMenuItemColumnCount"
        android:title="@string/column_count"
        android:icon="@drawable/ic_grid_view"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/mainMenuItemSettings"
        android:title="@string/settings"
        android:icon="@drawable/ic_settings"
        app:showAsAction="ifRoom"/>
</menu>