<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/about"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/aboutAppBarLayout"
        app:layout_scrollEffect="compress"
        android:fitsSystemWindows="true">
        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="270dp"
            android:id="@+id/aboutCollapsingToolbarLayout"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
            app:title="@string/about"
            app:expandedTitleMarginBottom="50dp"
            app:expandedTitleGravity="center_horizontal"
            app:titleCollapseMode="fade"
            app:expandedTitleTextAppearance="@style/TextAppearance.Material3.DisplayMedium"
            style="@style/Widget.Material3.CollapsingToolbar.Large">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/about"
                app:layout_collapseMode="parallax"
                android:textAppearance="@style/TextAppearance.Material3.DisplayMedium"/>
            <com.google.android.material.appbar.MaterialToolbar
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                app:layout_collapseMode="pin"
                app:title="@string/about"
                android:layout_gravity="bottom"
                android:id="@+id/aboutToolbar"
                app:navigationIcon="@drawable/outline_arrow_back_24"/>
        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/aboutNestedScrollView"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="100dp"
            android:paddingBottom="50dp">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center_horizontal"
                android:src="@mipmap/ic_launcher"
                android:contentDescription="@string/app_name" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="?android:colorPrimary"
                android:textAppearance="?textAppearanceHeadlineLarge"
                android:layout_marginTop="24dp"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_version_name"
                android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
                android:layout_gravity="center_horizontal"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:gravity="center_horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/developer_colon"
                    android:textAppearance="?textAppearanceBodyLarge"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?textAppearanceTitleLarge"
                    android:text="@string/developer_name"
                    android:textColor="?android:colorPrimary"
                    android:layout_marginStart="8dp"/>
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
                android:text="@string/about_text"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:justificationMode="inter_word"
                tools:targetApi="o" />

            <com.google.android.material.button.MaterialButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.Material3.Button.IconButton.Outlined"
                app:icon="@drawable/ic_github"
                android:id="@+id/aboutButtonGithub"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="32dp"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>