<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="24dp"
        android:paddingEnd="24dp">

        <com.google.android.material.bottomsheet.BottomSheetDragHandleView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/apk_details_layout_bottom_sheet_drag_handle_view"/>

        <ImageView
            android:layout_width="56dp"
            android:layout_height="56dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/apk_details_layout_bottom_sheet_drag_handle_view"
            android:src="@mipmap/ic_launcher"
            android:id="@+id/apk_details_layout_image_view_launcher_icon"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/apk_details_layout_image_view_launcher_icon"
            android:text="@string/app_name"
            app:layout_constraintTop_toTopOf="@id/apk_details_layout_image_view_launcher_icon"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="start"
            android:layout_marginStart="12dp"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="marquee_forever"
            android:singleLine="true"
            android:id="@+id/apk_details_layout_text_view_app_name"
            android:textAppearance="@style/TextAppearance.Material3.TitleMedium.Emphasized" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/package_name"
            android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
            app:layout_constraintTop_toBottomOf="@id/apk_details_layout_text_view_app_name"
            app:layout_constraintStart_toEndOf="@id/apk_details_layout_image_view_launcher_icon"
            android:layout_marginStart="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/apk_details_layout_image_view_launcher_icon"
            android:autoSizeMaxTextSize="14sp"
            android:autoSizeMinTextSize="13sp"
            android:id="@+id/apk_details_layout_text_view_package_name"/>

        <com.google.android.material.button.MaterialButtonGroup
            android:id="@+id/apk_details_button_group_actions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@id/apk_details_layout_text_view_label_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/apk_details_layout_image_view_launcher_icon"
            android:weightSum="10"
            android:spacing="0dp"
            app:innerCornerSize="4dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/apk_details_button_uninstall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.Material3.Button.IconButton.Filled"
                app:icon="@drawable/outline_delete_24"
                android:layout_weight="1"
                app:iconGravity="textStart"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/apk_details_button_backup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.Material3.Button.IconButton.Filled"
                app:icon="@drawable/outline_move_to_inbox_24"
                android:layout_weight="2"
                app:iconGravity="textStart"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/apk_details_button_open"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.Material3.Button.IconButton.Filled"
                app:icon="@drawable/outline_play_arrow_24"
                android:layout_weight="3"
                app:iconGravity="textStart"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/apk_details_button_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.Material3.Button.IconButton.Filled"
                app:icon="@drawable/ic_send"
                android:layout_weight="2"
                app:iconGravity="textStart"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/apk_details_button_view_app_in_settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/Widget.Material3.Button.IconButton.Filled"
                app:icon="@drawable/outline_open_in_new_24"
                android:layout_weight="1"
                app:iconGravity="textStart"/>

        </com.google.android.material.button.MaterialButtonGroup>

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/apk_details_button_group_actions"
        app:layout_constraintBottom_toTopOf="@id/apk_details_nested_scroll_view_details"
        android:id="@+id/apk_details_divider_top_and_details"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:visibility="invisible"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/apk_details_divider_top_and_details"
        android:id="@+id/apk_details_nested_scroll_view_details">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/size"
            android:textAppearance="@style/TextAppearance.Material3.TitleSmall"
            android:id="@+id/apk_details_layout_text_view_label_size" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category"
            android:textAppearance="@style/TextAppearance.Material3.TitleSmall"
            android:layout_marginTop="24dp"
            android:id="@+id/apk_details_layout_text_view_label_category" />


            <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/version_code"
            android:textAppearance="@style/TextAppearance.Material3.TitleSmall"
            android:layout_marginTop="24dp"
            android:id="@+id/apk_details_layout_text_view_label_version_code" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/version_name"
            android:textAppearance="@style/TextAppearance.Material3.TitleSmall"
            android:layout_marginTop="24dp"
            android:id="@+id/apk_details_layout_text_view_label_version_name" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/installation_time"
            android:textAppearance="@style/TextAppearance.Material3.TitleSmall"
            android:layout_marginTop="24dp"
            android:id="@+id/apk_details_layout_text_view_label_installation_time" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/last_update_time"
            android:textAppearance="@style/TextAppearance.Material3.TitleSmall"
            app:layout_constraintTop_toBottomOf="@id/apk_details_layout_text_view_label_installation_time"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/apk_details_layout_text_view_label_last_update_time" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/permissions"
            android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
            android:layout_marginTop="24dp"
            android:id="@+id/apk_details_layout_text_view_label_permissions" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="Lorem Ipsum Permission For UI Designing\nLorem Ipsum Permission For UI Designing\nLorem Ipsum Permission For UI Designing\nLorem Ipsum Permission For UI Designing"
            android:textAppearance="@style/TextAppearance.Material3.BodySmall"
            android:layout_marginTop="10dp"
            android:id="@+id/apk_details_layout_text_view_content_permissions"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>