<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    tools:context=".MainActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/mainRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        android:scrollbarThumbVertical="@drawable/scroll_thumb"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"/>

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        app:statusBarForeground="?attr/colorSurface">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="?collapsingToolbarLayoutLargeSize"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
            app:contentScrim="?colorSurfaceContainer"
            app:title="@string/app_name"
            app:expandedTitleTextAppearance="@style/TextAppearance.Material3.DisplayMedium"
            app:titleCollapseMode="fade"
            style="@style/Widget.Material3.CollapsingToolbar.Large">
            <com.google.android.material.appbar.MaterialToolbar
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                app:layout_collapseMode="pin"
                app:title="@string/app_name"
                android:id="@+id/mainToolbar"/>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
        <com.google.android.material.search.SearchBar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/mainSearchBar"
            android:hint="@string/search_for_apps"
            android:contentDescription="@string/search_for_apps"/>
    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.search.SearchView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/mainSearchView"
        android:hint="@string/search_for_apps"
        app:layout_anchor="@id/mainSearchBar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/mainRecyclerViewSearchResults"/>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/mainSearchViewFloatingActionBarSend"
                android:src="@drawable/ic_send"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="24dp"
                android:contentDescription="@string/send"
                style="@style/ThemeOverlay.Material3.FloatingActionButton.Secondary"/>
        </RelativeLayout>
    </com.google.android.material.search.SearchView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/mainFloatingActionBarSend"
                android:src="@drawable/ic_send"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="24dp"
                android:contentDescription="@string/send"/>
        </RelativeLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>